# blocky_conf

./: blocked_page.service  blocky.service  blocky_etc.txt  config.yml
blocked_page/: Cargo.toml  forbidden.html
blocked_page/src/: main.rs
install_all/: Cargo.toml
install_all/src/: main.rs
