[package]
name = "blocked_page"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
num_cpus = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1 
